--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/mousetrap": "^1.6.9",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vite-plugin-pwa": "^0.12.0",
     "workbox-build": "^6.5.3"
   },
   "dependencies": {
-    "idb": "^7.0.1"
+    "idb": "^7.0.1",
+    "mousetrap": "^1.6.5"
   }
 }
